[package]
name = "kcptun-sip003-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = [
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
] }
tokio_kcp = { git = "https://github.com/oyyd/tokio_kcp.git", branch = "hack" }
tokio_smux = "0.2"
anyhow = "1.0.79"
log = "0.4.20"
env_logger = "0.10.1"
tokio-io-timeout = "1.2.0"

[dev-dependencies]
tokio-socks = "0.5.1"
reqwest = { version = "0.11.23", features = ["socks"] }
